--- a/Oblig-1-ITPE3200/wwwroot/index.html
+++ b/Oblig-1-ITPE3200/wwwroot/index.html
@@ -2,9 +2,22 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Oblig 1</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
+    <script src="js/index.js"></script>
 </head>
 <body>
-    <div>heyho</div>
+    <h1>Oblig</h1>
+    <table>
+        <tr>
+            <th>Diseases</th>
+            <th>Symptoms</th>
+        </tr>
+        <tr>
+            <td><div id="diseases"></div></td>
+            <td><div id="symptoms"></div></td>
+        </tr>
+    </table>
 </body>
 </html>
