Createt joining table

--- a/Oblig-1-ITPE3200/wwwroot/index.html
+++ b/Oblig-1-ITPE3200/wwwroot/index.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <h1>Oblig</h1>
-    <table>
+    <table class='table table-striped'>
         <tr>
             <th>Diseases</th>
             <th>Symptoms</th>
         </tr>
         <tr>
-            <td><div id="diseases"></div></td>
-            <td><div id="symptoms"></div></td>
+            <td id="diseases"></td>
+            <td id="symptoms"></td>
         </tr>
     </table>
 </body>
