my first commit

--- a/Oblig-1-ITPE3200/wwwroot/index.html
+++ b/Oblig-1-ITPE3200/wwwroot/index.html
@@ -2,9 +2,13 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Symptom til diagnose kalkulator</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
+    <script src="js/index.js"></script>
 </head>
 <body>
-    <div>heyho</div>
+    <h1>Symptom til diagnose kalkulator</h1>
+    <div id="list"></div>
 </body>
 </html>
