finished search functionality and added basic CRUD for all classes

--- a/Oblig-1-ITPE3200/wwwroot/index.html
+++ b/Oblig-1-ITPE3200/wwwroot/index.html
@@ -8,16 +8,9 @@
     <script src="js/index.js"></script>
 </head>
 <body>
-    <h1>Oblig</h1>
-    <table class='table table-striped'>
-        <tr>
-            <th>Diseases</th>
-            <th>Symptoms</th>
-        </tr>
-        <tr>
-            <td id="diseases"></td>
-            <td id="symptoms"></td>
-        </tr>
-    </table>
+    <h1>Diseases</h1>
+    <div id="diseases"></div>
+    <a href="lagre.html" class="btn btn-primary" disabled>Save new disease</a>
+    <a href="search.html" class="btn btn-primary">Search page</a>
 </body>
 </html>
