Finished edit page

--- a/Oblig-1-ITPE3200/wwwroot/index.html
+++ b/Oblig-1-ITPE3200/wwwroot/index.html
@@ -8,9 +8,11 @@
     <script src="js/index.js"></script>
 </head>
 <body>
-    <h1>Diseases</h1>
-    <div id="diseases"></div>
-    <a href="lagre.html" class="btn btn-primary" disabled>Save new disease</a>
-    <a href="search.html" class="btn btn-primary">Search page</a>
+    <div class="container">
+        <h1>Diseases</h1>
+        <div id="diseases"></div>
+        <a href="lagre.html" class="btn btn-primary" disabled>Save new disease</a>
+        <a href="search.html" class="btn btn-primary">Search page</a>
+    </div>
 </body>
 </html>
