--- a/Oblig-1-ITPE3200/wwwroot/search.html
+++ b/Oblig-1-ITPE3200/wwwroot/search.html
@@ -12,6 +12,7 @@
         <h1>Search</h1>
         <div id="symptoms"></div>
         <button class="btn btn-primary" onclick="search()">Find matching diseases</button>
+        <a href="index.html" class="btn">Back to index</a>
         <div id="results"></div>
     </div>
 </body>
