--- a/Oblig-1-ITPE3200/wwwroot/admin.html
+++ b/Oblig-1-ITPE3200/wwwroot/admin.html
@@ -2,16 +2,16 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Symptom til diagnose kalkulator</title>
+    <title>Admin dashboard</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
-    <script src="js/index.js"></script>
+    <script src="js/admin.js"></script>
 </head>
 <body>
     <div class="container">
-        <h1>Symptom til diagnose kalkulator</h1>
-        <div id="kalkulator"></div>
-        <a class="btn btn-primary" href="admin.html">Admin</a>
+        <h1>Dashboard</h1>
+        <div id="dashboard"></div>
+        <a class="btn btn-primary" href="index.html">Home</a>
     </div>
 </body>
 </html>
