Created disease creation page

--- a/Oblig-1-ITPE3200/wwwroot/index.html
+++ b/Oblig-1-ITPE3200/wwwroot/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8" />
     <title>Oblig 1</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="js/index.js"></script>
 </head>
 <body>
     <div class="container">
         <h1>Diseases</h1>
-        <div id="diseases"></div>
-        <a href="lagre.html" class="btn btn-primary" disabled>Save new disease</a>
+        <div class="mb-3" id="diseases"></div>
+        <a href="lagre.html" class="btn btn-primary">Save new disease</a>
         <a href="search.html" class="btn btn-primary">Search page</a>
     </div>
 </body>
