--- a/Oblig-1-ITPE3200/wwwroot/search.html
+++ b/Oblig-1-ITPE3200/wwwroot/search.html
@@ -4,16 +4,18 @@
     <meta charset="utf-8" />
     <title>Search</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="js/search.js"></script>
 </head>
 <body>
     <div class="container">
-        <h1>Search</h1>
-        <div id="symptoms"></div>
+        <div class="mb-3">
+            <h1>Search</h1>
+        </div>
+        <div id="symptoms" class="mb-3"></div>
         <button class="btn btn-primary" onclick="search()">Find matching diseases</button>
-        <a href="index.html" class="btn">Back to index</a>
-        <div id="results"></div>
+        <a href="index.html" class="btn btn-secondary">Back to index</a>
+        <div id="results" class="mb-3"></div>
     </div>
 </body>
 </html>
