Added deletion for diseases into both back- and frontend

--- a/Oblig-1-ITPE3200/wwwroot/index.html
+++ b/Oblig-1-ITPE3200/wwwroot/index.html
@@ -19,5 +19,8 @@
             <td id="symptoms"></td>
         </tr>
     </table>
+    <div id="err" style="color: red;">
+
+    </div>
 </body>
 </html>
