--- a/Oblig-1-ITPE3200/wwwroot/change.html
+++ b/Oblig-1-ITPE3200/wwwroot/change.html
@@ -16,8 +16,12 @@
                 <label>Name</label>
                 <input type="text" id="name" />
             </div>
+            <div class="form-group">
+                <label>Description</label>
+                <input type="text" id="description" style="width: 300px; height: 200px;"/>
+            </div>
             <div id="symptoms">
-
+                <input type="checkbox" />
             </div>
             <div class="form-group">
                 <input type="button" id="reg" value="Change" class="btn btn-primary" onclick="changeDisease()" />
