--- a/Oblig-1-ITPE3200/wwwroot/change.html
+++ b/Oblig-1-ITPE3200/wwwroot/change.html
@@ -21,12 +21,14 @@
                 <input type="text" id="description" style="width: 300px; height: 200px;"/>
             </div>
             <div id="symptoms">
-                <input type="checkbox" />
+
             </div>
             <div class="form-group">
                 <input type="button" id="reg" value="Change" class="btn btn-primary" onclick="changeDisease()" />
             </div>
-            <div id="feil" style="color: red"></div>
+            <div id="err" style="color: red">
+
+            </div>
         </form>
     </div>
 </body>
