Upgraded chekcboxes with using objects in js and adding id to web.

--- a/Oblig-1-ITPE3200/wwwroot/change.html
+++ b/Oblig-1-ITPE3200/wwwroot/change.html
@@ -20,8 +20,10 @@
                 <label>Description</label>
                 <input type="text" id="description" style="width: 300px; height: 200px;"/>
             </div>
-            <div id="symptoms">
+            <div class="form-group">
+                <div id="symptoms">
 
+                </div>
             </div>
             <div class="form-group">
                 <input type="button" id="reg" value="Change" class="btn btn-primary" onclick="changeDisease()" />
