--- a/Oblig-1-ITPE3200/wwwroot/admin.html
+++ b/Oblig-1-ITPE3200/wwwroot/admin.html
@@ -2,13 +2,16 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Kalkulator</title>
+    <title>List - Admin</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="js/index.js"></script>
+    <script src="js/admin.js"></script>
 </head>
 <body>
-    <h1>Symptom til diagnose kalkulator</h1>
-    <h2>(User page)</h2>
+    <h1>List of diseases - Admin</h1>
+
+    <div id="visListe"></div>
+    <a href="lagre.html" class="btn btn-primary">Add a disease</a>
+    <p id="feil"></p>
 </body>
 </html>
