--- a/Oblig-1-ITPE3200/wwwroot/index.html
+++ b/Oblig-1-ITPE3200/wwwroot/index.html
@@ -10,8 +10,27 @@
 <body>
     <div class="container">
         <h1>Symptom til diagnose kalkulator</h1>
-        <div id="kalkulator"></div>
-        <a class="btn btn-primary" href="admin.html">Admin</a>
+        <div class="row">
+            <div class="col-md-8">
+                <form class="form">
+                    <div class="form-group">
+                        <div id="kalkulator"></div>
+                    </div>
+                    <div class="form-group">
+                        <textarea class="form-control" id="symptomList" rows="5" placeholder="Here comes symptoms..."></textarea>
+                    </div>
+                    <div class="form-group">
+                        <input type="button" class="btn btn-primary" onclick="diagnose()" value="Diagnose">
+                    </div>
+                    <div class="form-group">
+                        <textarea class="form-control" id="diagnoseList" rows="5" placeholder="Here comes diagnosis..."></textarea>
+                    </div>
+                </form>
+            </div>
+            <div class="col-md-4">
+                <a class="btn btn-primary" href="admin.html">Admin</a>
+            </div>
+        </div>
     </div>
 </body>
 </html>
