Added description field and started implementing DTOs

--- a/Oblig-1-ITPE3200/wwwroot/endre.html
+++ b/Oblig-1-ITPE3200/wwwroot/endre.html
@@ -18,6 +18,10 @@
                 <input type="text" class="form-control" id="name">
             </div>
             <div class="mb-3">
+                <label for="name" class="form-label">Disease description</label>
+                <input type="text" class="form-control" id="description">
+            </div>
+            <div class="mb-3">
                 Select symptoms
             </div>
             <div class="mb-3" id="symptomsdiv">
