--- a/Oblig-1-ITPE3200/wwwroot/disease.html
+++ b/Oblig-1-ITPE3200/wwwroot/disease.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Save new disease</title>
+    <title>View disease</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <script src="js/lagre.js"></script>
+    <script src="js/disease.js"></script>
     <style>
         body {
             padding-top: 4.5rem;
@@ -28,35 +27,22 @@
                         <a class="nav-link" href="diseaselist.html">Disease list</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="lagre.html">Save new disease</a>
+                        <a class="nav-link" href="lagre.html">Save new disease</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
     <div class="container">
-        <h1>Save new disease</h1>
-        <form>
-            <div class="mb-3">
-                <label for="name" class="form-label">Disease name</label>
-                <input type="text" class="form-control" id="name">
-            </div>
-            <div class="mb-3">
-                <label for="name" class="form-label">Disease description</label>
-                <input type="text" class="form-control" id="description">
-            </div>
-            <div class="mb-3">
-                Select symptoms
-            </div>
-            <div class="mb-3" id="symptomsdiv">
-
-            </div>
-        </form>
-        <button type="submit" onclick="createDisease()" class="btn btn-primary">Save</button>
-        <a href="#" onclick="history.back()" class="btn btn-danger">Cancel</a>
-        <div class="mb-3" id="#feil">
-
-        </div>
+        <header class="mb-3">
+            <div class="fw-light">Disease</div>
+            <h1 id="name"></h1>
+        </header>
+        <h6>Description:</h6>
+        <p class="mb-3" id="description"></p>
+        <h6>Symptoms:</h6>
+        <p class="mb-3" id="symptoms"></p>
+        <p class="pt-3"><a href="#" onclick="history.back()" class="link-secondary">Back</a></p>
     </div>
 </body>
 </html>
