--- a/Oblig-1-ITPE3200/wwwroot/endre.html
+++ b/Oblig-1-ITPE3200/wwwroot/endre.html
@@ -2,13 +2,38 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Edit disease</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="js/endre.js"></script>
+    <style>
+        body {
+            padding-top: 4.5rem;
+        }
+    </style>
 </head>
 <body>
+    <!-- navbar code from bootstrap template https://getbootstrap.com/docs/5.2/examples/navbar-fixed/ -->
+    <nav class="navbar navbar-expand navbar-light bg-light border-bottom fixed-top">
+        <div class="container-fluid">
+            <a class="navbar-brand mb-0 h1" href="index.html">Symptomkalkulator</a>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="diseaselist.html">Disease list</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="lagre.html">Save new disease</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <div class="container">
         <h1>Edit disease</h1>
         <form>
@@ -29,7 +54,7 @@
             </div>
         </form>
         <button type="submit" onclick="saveChanges()" class="btn btn-primary">Save changes</button>
-        <a href="index.html" class="btn btn-danger">Discard changes</a>
+        <a href="diseaselist.html" class="btn btn-danger">Discard changes</a>
         <div class="mb-3" id="#feil">
 
         </div>
