--- a/Oblig-1-ITPE3200/wwwroot/index.html
+++ b/Oblig-1-ITPE3200/wwwroot/index.html
@@ -2,17 +2,51 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Oblig 1</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Search</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <script src="js/index.js"></script>
+    <script src="js/search.js"></script>
+    <style>
+        body {
+            padding-top: 4.5rem;
+        }
+    </style>
 </head>
 <body>
+    <!-- navbar code from bootstrap template https://getbootstrap.com/docs/5.2/examples/navbar-fixed/ -->
+    <nav class="navbar navbar-expand navbar-light bg-light border-bottom fixed-top">
+        <div class="container-fluid">
+            <a class="navbar-brand mb-0 h1" href="index.html">Symptomkalkulator</a>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="diseaselist.html">Disease list</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="lagre.html">Save new disease</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <div class="container">
-        <h1>Diseases</h1>
-        <div class="mb-3" id="diseases"></div>
-        <a href="lagre.html" class="btn btn-primary">Save new disease</a>
-        <a href="search.html" class="btn btn-primary">Search page</a>
+        <header class="mb-  ">
+            <h1>Symptomkalkulator</h1>
+        </header>
+        <h6 class="mb-3">Select symptoms:</h6>
+        <div class="mb-3">
+            <form>
+                <div id="symptoms" class="mb-3">
+
+                </div>
+            </form>
+            <button class="btn btn-primary" onclick="search()">Find matching diseases</button>
+        </div>
+        <div id="results" class="mb-3"></div>
     </div>
 </body>
 </html>
