--- a/Oblig-1-ITPE3200/wwwroot/endre.html
+++ b/Oblig-1-ITPE3200/wwwroot/endre.html
@@ -35,26 +35,32 @@
         </div>
     </nav>
     <div class="container">
-        <h1>Edit disease</h1>
-        <form>
-            <input type="hidden" id="id" />
-            <div class="mb-3">
-                <label for="name" class="form-label">Disease name</label>
-                <input type="text" class="form-control" id="name">
-            </div>
-            <div class="mb-3">
-                <label for="name" class="form-label">Disease description</label>
-                <input type="text" class="form-control" id="description">
-            </div>
-            <div class="mb-3">
-                Select symptoms
-            </div>
-            <div class="mb-3" id="symptomsdiv">
+        <h1>Edit disease details</h1>
+        <div class="mb-4">
+            <form>
+                <input type="hidden" id="id" />
+                <div class="mb-3">
+                    <label for="name" class="form-label">Disease name</label>
+                    <input type="text" class="form-control" id="name">
+                </div>
+                <div class="mb-3">
+                    <label for="name" class="form-label">Disease description</label>
+                    <input type="text" class="form-control" id="description">
+                </div>
+            </form>
+        </div>
+        <div class="mb-4">
+            <button type="submit" onclick="saveChanges()" class="btn btn-primary">Save name and description</button>
+            <a href="diseaselist.html" class="btn btn-danger">Discard</a>
+        </div>
+        <h2>Edit symptoms</h2>
+        <div class="mb-3" id="selectedsymptomsdiv">
 
-            </div>
-        </form>
-        <button type="submit" onclick="saveChanges()" class="btn btn-primary">Save changes</button>
-        <a href="diseaselist.html" class="btn btn-danger">Discard changes</a>
+        </div>
+        <div class="mb-3" id="notselectedsymptomsdiv">
+
+        </div>
+
         <div class="mb-3" id="#feil">
 
         </div>
