--- a/Oblig-1-ITPE3200/wwwroot/endre.html
+++ b/Oblig-1-ITPE3200/wwwroot/endre.html
@@ -50,8 +50,8 @@
             </form>
         </div>
         <div class="mb-4">
-            <button type="submit" onclick="saveChanges()" class="btn btn-primary">Save name and description</button>
-            <a href="diseaselist.html" class="btn btn-danger">Discard</a>
+            <button type="submit" onclick="saveChanges()" class="btn btn-primary">Save changes</button>
+            <a href="diseaselist.html" class="btn btn-danger">Go back</a>
         </div>
         <h2>Edit symptoms</h2>
         <div class="mb-3" id="selectedsymptomsdiv">
