Made functional webistes on all html files. Now working on js for index

--- a/Oblig-1-ITPE3200/wwwroot/admin.html
+++ b/Oblig-1-ITPE3200/wwwroot/admin.html
@@ -5,7 +5,7 @@
     <title>Oblig 1</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
-    <script src="js/index.js"></script>
+    <script src="js/admin.js"></script>
 </head>
 <body>
     <h1>Oblig</h1>
@@ -21,6 +21,9 @@
     </table>
     <div id="err" style="color: red;">
 
+    </div>
+    <div class="container">
+        <a class="btn btn-primary" href="index.html">Back</a>
     </div>
 </body>
 </html>
