--- a/Oblig-1-ITPE3200/wwwroot/change.html
+++ b/Oblig-1-ITPE3200/wwwroot/change.html
@@ -32,6 +32,7 @@
 
             </div>
         </form>
+        <a class="btn btn-primary" href="admin.html">Back</a>
     </div>
 </body>
 </html>
