--- a/Oblig-1-ITPE3200/wwwroot/index.html
+++ b/Oblig-1-ITPE3200/wwwroot/index.html
@@ -30,6 +30,7 @@
             <div class="col-md-4">
                 <a class="btn btn-primary" href="admin.html">Admin</a>
             </div>
+            <div id="test"></div>
         </div>
     </div>
 </body>
