--- a/Oblig-1-ITPE3200/wwwroot/index.html
+++ b/Oblig-1-ITPE3200/wwwroot/index.html
@@ -26,7 +26,7 @@
         </div>
         <div class="row">
             <div class="col-md">
-                <button class="btn btn-primary" onclick="">Calculate</button>
+                <button class="btn btn-primary" onclick="findMatchingDisease()">Calculate</button>
             </div>
         </div>
         <div class="row">
