--- a/Oblig-1-ITPE3200/wwwroot/index.html
+++ b/Oblig-1-ITPE3200/wwwroot/index.html
@@ -6,6 +6,7 @@
     <title>Search</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" integrity="sha384-xeJqLiuOvjUBq3iGOjvSQSIlwrpqjSHXpduPd6rQpuiM3f5/ijby8pCsnbu5S81n" crossorigin="anonymous">
     <script src="js/search.js"></script>
     <style>
         body {
@@ -33,20 +34,44 @@
             </div>
         </div>
     </nav>
+    <!-- start of content -->
     <div class="container">
-        <header class="mb-  ">
-            <h1>Symptomkalkulator</h1>
+        <header class="mb-3">
+            <h1 class="pb-2">Symptomkalkulator</h1>
         </header>
-        <h6 class="mb-3">Select symptoms:</h6>
-        <div class="mb-3">
+        <h4 class="pb-2">Matching diseases</h4>
+        <div id="results" class="p-3 border">
+            <div class="text-muted">No symptoms selected</div>
+        </div>
+        <div class="p-3 mb-3 border border-top-0 rounded-bottom bg-light">
+            <h6>Selected symptoms</h6>
+            <div id="selectedsymptomsdiv">
+                <div class="text-muted">No symptoms selected</div>
+            </div>
+        </div>
+        <h4 class="pb-2">Symptoms list</h4>
+        <div id="filters" class="p-3 border border-bottom-0 rounded-top bg-light">
+            <form class="row align-items-center">
+                <div class="col-sm-7">
+                    <label for="formGroupExampleInput" class="visually-hidden">Example label</label>
+                    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Enter symptom name">
+                </div>
+                <div class="col-sm">
+                    <button type="submit" class="btn btn-primary">Search</button>
+                    <button type="submit" class="btn btn-primary">Clear filter</button>
+                </div>
+                <div class="col-sm">
+                    Sort | results per page | next and previous page
+                </div>
+            </form>
+        </div>
+        <div class="mb-3 p-3 border">
             <form>
-                <div id="symptoms" class="mb-3">
+                <div id="symptoms">
 
                 </div>
             </form>
-            <button class="btn btn-primary" onclick="search()">Find matching diseases</button>
         </div>
-        <div id="results" class="mb-3"></div>
     </div>
 </body>
 </html>
