--- a/Oblig-1-ITPE3200/wwwroot/index.html
+++ b/Oblig-1-ITPE3200/wwwroot/index.html
@@ -34,34 +34,34 @@
             </div>
         </div>
     </nav>
-    <!-- start of content -->
+    <!-- end of navbar -->
     <div class="container">
+
         <header class="mb-3">
             <h1 class="pb-2">Symptomkalkulator</h1>
         </header>
+        
         <h4 class="pb-2">Matching diseases</h4>
         <div id="results" class="p-3 border">
             <div class="text-muted">No symptoms selected</div>
         </div>
         <div class="p-3 mb-3 border border-top-0 rounded-bottom bg-light">
-            <h6>Selected symptoms</h6>
+            <h6>Selected symptoms (click to deselect)</h6>
             <div id="selectedsymptomsdiv">
                 <div class="text-muted">No symptoms selected</div>
             </div>
         </div>
+        
         <h4 class="pb-2">Symptoms list</h4>
         <div id="filters" class="p-3 border border-bottom-0 rounded-top bg-light">
             <form class="row align-items-center">
-                <div class="col-sm-7">
-                    <label for="formGroupExampleInput" class="visually-hidden">Example label</label>
-                    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Enter symptom name">
+                <div class="col-sm-5">
+                    <label for="searchBox" class="visually-hidden">Search for symptom</label>
+                    <input type="search" class="form-control" id="searchBox" placeholder="Enter symptom name">
                 </div>
                 <div class="col-sm">
-                    <button type="submit" class="btn btn-primary">Search</button>
-                    <button type="submit" class="btn btn-primary">Clear filter</button>
-                </div>
-                <div class="col-sm">
-                    Sort | results per page | next and previous page
+                    <button type="submit" class="btn btn-primary" onclick="refreshSymptomList()">Search symptoms by name</button>
+                    <button type="button" class="btn btn-secondary" onclick="clearSearch()">Clear search</button>
                 </div>
             </form>
         </div>
