updated admin page

--- a/Oblig-1-ITPE3200/wwwroot/edit.html
+++ b/Oblig-1-ITPE3200/wwwroot/edit.html
@@ -8,6 +8,11 @@
     <script src="js/edit.js"></script>
 </head>
 <body>
-
+    <div class="container">
+        <h3 id="diagnoseNavn"></h3>
+        <div id="table"></div>
+        <input type="text" id="editSymptom" />
+        <button onclick="addSymptom()">Add</button>
+    </div>
 </body>
 </html>
