Refactoring and tidying up code

--- a/Oblig-1-ITPE3200/wwwroot/index.html
+++ b/Oblig-1-ITPE3200/wwwroot/index.html
@@ -60,7 +60,7 @@
                     <input type="search" class="form-control" id="searchBox" placeholder="Enter symptom name" on>
                 </div>
                 <div class="col-sm">
-                    <button type="submit" class="btn btn-primary" onclick="refreshSymptomList()">Search symptoms by name</button>
+                    <button type="submit" class="btn btn-primary" onclick="generateSymptomsList()">Search symptoms by name</button>
                     <button type="button" class="btn btn-secondary" onclick="clearSearch()">Clear search</button>
                 </div>
             </form>
