--- a/Oblig-1-ITPE3200/wwwroot/diseaselist.html
+++ b/Oblig-1-ITPE3200/wwwroot/diseaselist.html
@@ -6,6 +6,7 @@
     <title>Disease list</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" integrity="sha384-xeJqLiuOvjUBq3iGOjvSQSIlwrpqjSHXpduPd6rQpuiM3f5/ijby8pCsnbu5S81n" crossorigin="anonymous">
     <script src="js/diseaselist.js"></script>
     <style>
         body {
@@ -35,8 +36,23 @@
     </nav>
     <div class="container">
         <h1>Diseases</h1>
-        <div class="mb-3" id="diseases"></div>
-        <a href="lagre.html" class="btn btn-primary">Save new disease</a>
+        <div id="filters" class="p-3 border rounded bg-light">
+            <form class="row align-items-center" onsubmit="return false;">
+                <div class="col-sm-4">
+                    <label for="searchBox" class="visually-hidden">Search for disease</label>
+                    <input type="search" class="form-control" id="searchBox" placeholder="Disease name" on>
+                </div>
+                <div class="col-sm">
+                    <button type="submit" class="btn btn-primary" onclick="getalldiseases()">Search</button>
+                    <button type="button" class="btn btn-secondary" onclick="clearSearch()">Clear search</button>
+                </div>
+            </form>
+        </div>
+        <div class="mb-3 p-3">
+            <div id="diseases">
+
+            </div>
+        </div>
     </div>
 </body>
 </html>
