--- a/Oblig-1-ITPE3200/wwwroot/diseaselist.html
+++ b/Oblig-1-ITPE3200/wwwroot/diseaselist.html
@@ -17,8 +17,8 @@
 <body>
     <!-- navbar code from bootstrap template https://getbootstrap.com/docs/5.2/examples/navbar-fixed/ -->
     <nav class="navbar navbar-expand navbar-light bg-light border-bottom fixed-top">
-        <div class="container-fluid">
-            <a class="navbar-brand mb-0 h1" href="index.html">Symptomkalkulator</a>
+        <div class="container align-items-center">
+            <a class="navbar-brand mb-0 h1" href="index.html"><i class="bi bi-calculator"></i> Symptomkalkulator</a>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
                     <li class="nav-item">
@@ -36,7 +36,7 @@
     </nav>
     <div class="container">
         <h1>Diseases</h1>
-        <div id="filters" class="p-3 border rounded bg-light">
+        <div id="filters" class="p-3 mt-3 border rounded bg-light">
             <form class="row align-items-center" onsubmit="return false;">
                 <div class="col-sm-4">
                     <label for="searchBox" class="visually-hidden">Search for disease</label>
@@ -48,7 +48,7 @@
                 </div>
             </form>
         </div>
-        <div class="mb-3 p-3">
+        <div class="p-3">
             <div id="diseases">
 
             </div>
