--- a/Oblig-1-ITPE3200/wwwroot/endre.html
+++ b/Oblig-1-ITPE3200/wwwroot/endre.html
@@ -7,6 +7,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" integrity="sha384-xeJqLiuOvjUBq3iGOjvSQSIlwrpqjSHXpduPd6rQpuiM3f5/ijby8pCsnbu5S81n" crossorigin="anonymous">
     <script src="js/endre.js"></script>
     <style>
         body {
@@ -17,8 +18,8 @@
 <body>
     <!-- navbar code from bootstrap template https://getbootstrap.com/docs/5.2/examples/navbar-fixed/ -->
     <nav class="navbar navbar-expand navbar-light bg-light border-bottom fixed-top">
-        <div class="container-fluid">
-            <a class="navbar-brand mb-0 h1" href="index.html">Symptomkalkulator</a>
+        <div class="container align-items-center">
+            <a class="navbar-brand mb-0 h1" href="index.html"><i class="bi bi-calculator"></i> Symptomkalkulator</a>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
                     <li class="nav-item">
@@ -34,9 +35,10 @@
             </div>
         </div>
     </nav>
+    <!-- end navbar -->
     <div class="container">
         <h1>Edit disease details</h1>
-        <div class="mb-4">
+        <div class="p-3 mt-3 rounded-top border border-bottom-0 bg-light">
             <form>
                 <input type="hidden" id="id" />
                 <div class="mb-3">
@@ -49,18 +51,35 @@
                 </div>
             </form>
         </div>
-        <div class="mb-4">
+        <div class="bg-light border p-3">
             <button type="submit" onclick="saveChanges()" class="btn btn-primary">Save changes</button>
-            <a href="diseaselist.html" class="btn btn-danger">Go back</a>
+            <a href="diseaselist.html" class="btn btn-danger">Discard changes</a>
         </div>
-        <h2>Edit symptoms</h2>
-        <div class="mb-3" id="selectedsymptomsdiv">
-
+        <div class="p-3 mb-3 border border-top-0 rounded-bottom">
+            <h6>Associated symptoms (click to remove)</h6>
+            <div id="selectedsymptomsdiv">
+                <div class="text-muted">None</div>
+            </div>
         </div>
-        <div class="mb-3" id="notselectedsymptomsdiv">
 
+        <h5 class="pb-2">Symptoms list</h5>
+        <div id="filters" class="p-3 border border-bottom-0 rounded-top bg-light">
+            <form class="row align-items-center" onsubmit="return false;">
+                <div class="col-sm-5">
+                    <label for="searchBox" class="visually-hidden">Search for symptom</label>
+                    <input type="search" class="form-control" id="searchBox" placeholder="Enter symptom name" on>
+                </div>
+                <div class="col-sm">
+                    <button type="submit" class="btn btn-primary" onclick="generateSymptomsList()">Search</button>
+                    <button type="button" class="btn btn-secondary" onclick="clearSearch()">Clear search</button>
+                </div>
+            </form>
         </div>
+        <div class="mb-3 p-3 border">
+            <div id="symptoms">
 
+            </div>
+        </div>
         <div class="mb-3" id="#feil">
 
         </div>
