--- a/Oblig-1-ITPE3200/wwwroot/disease.html
+++ b/Oblig-1-ITPE3200/wwwroot/disease.html
@@ -6,6 +6,7 @@
     <title>View disease</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" integrity="sha384-xeJqLiuOvjUBq3iGOjvSQSIlwrpqjSHXpduPd6rQpuiM3f5/ijby8pCsnbu5S81n" crossorigin="anonymous">
     <script src="js/disease.js"></script>
     <style>
         body {
@@ -16,8 +17,8 @@
 <body>
     <!-- navbar code from bootstrap template https://getbootstrap.com/docs/5.2/examples/navbar-fixed/ -->
     <nav class="navbar navbar-expand navbar-light bg-light border-bottom fixed-top">
-        <div class="container-fluid">
-            <a class="navbar-brand mb-0 h1" href="index.html">Symptomkalkulator</a>
+        <div class="container align-items-center">
+            <a class="navbar-brand mb-0 h1" href="index.html"><i class="bi bi-calculator"></i> Symptomkalkulator</a>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
                     <li class="nav-item">
