--- a/Oblig-1-ITPE3200/wwwroot/diseaselist.html
+++ b/Oblig-1-ITPE3200/wwwroot/diseaselist.html
@@ -34,6 +34,7 @@
             </div>
         </div>
     </nav>
+    <!-- end of navbar -->
     <div class="container">
         <h1>Diseases</h1>
         <div id="filters" class="p-3 mt-3 border rounded bg-light">
