--- a/Oblig-1-ITPE3200/wwwroot/endre.html
+++ b/Oblig-1-ITPE3200/wwwroot/endre.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Edit disease</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" integrity="sha384-xeJqLiuOvjUBq3iGOjvSQSIlwrpqjSHXpduPd6rQpuiM3f5/ijby8pCsnbu5S81n" crossorigin="anonymous">
     <script src="js/endre.js"></script>
+    <script src="js/symptomstable.js"></script>
     <style>
         body {
             padding-top: 4.5rem;
@@ -35,7 +35,7 @@
             </div>
         </div>
     </nav>
-    <!-- end navbar -->
+    <!-- end of navbar -->
     <div class="container">
         <h1>Edit disease details</h1>
         <div class="p-3 mt-3 rounded-top border border-bottom-0 bg-light">
@@ -63,26 +63,50 @@
         </div>
 
         <h5 class="pb-2">Symptoms list</h5>
+        <!-- search bar etc. -->
         <div id="filters" class="p-3 border border-bottom-0 rounded-top bg-light">
-            <form class="row align-items-center" onsubmit="return false;">
-                <div class="col-sm-5">
+            <form class="form-inline row align-items-center" onsubmit="return false;">
+                <div class="col-4">
                     <label for="searchBox" class="visually-hidden">Search for symptom</label>
                     <input type="search" class="form-control" id="searchBox" placeholder="Enter symptom name" on>
                 </div>
-                <div class="col-sm">
+                <div class="col">
                     <button type="submit" class="btn btn-primary" onclick="generateSymptomsList()">Search</button>
                     <button type="button" class="btn btn-secondary" onclick="clearSearch()">Clear search</button>
                 </div>
             </form>
         </div>
-        <div class="mb-3 p-3 border">
+
+        <!-- output table -->
+        <div class="p-3 border">
             <div id="symptoms">
 
+            </div>
+        </div>
+
+        <!-- paging -->
+        <div class="p-3 mb-3 border border-top-0 rounded-bottom bg-light">
+            <div class="row justify-content-start align-items-center">
+                <div class="col-auto">
+                    <ul class="pagination mb-0" id="pagenav">
+                    </ul>
+                </div>
+                <div class="col-auto">
+                    Results per page:
+                </div>
+                <div class="col-auto">
+                    <select class="form-select" aria-label="Default select example" onchange="generateSymptomsList()" id="pagesizeselect">
+                        <option value="5">5</option>
+                        <option selected value="10">10</option>
+                        <option value="20">20</option>
+                    </select>
+                </div>
             </div>
         </div>
         <div class="mb-3" id="#feil">
 
         </div>
+
     </div>
 </body>
 </html>
