--- a/Oblig-1-ITPE3200/wwwroot/index.html
+++ b/Oblig-1-ITPE3200/wwwroot/index.html
@@ -7,7 +7,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" integrity="sha384-xeJqLiuOvjUBq3iGOjvSQSIlwrpqjSHXpduPd6rQpuiM3f5/ijby8pCsnbu5S81n" crossorigin="anonymous">
-    <script src="js/search.js"></script>
+    <script src="js/index.js"></script>
+    <script src="js/symptomstable.js"></script>
     <style>
         body {
             padding-top: 4.5rem;
@@ -57,6 +58,7 @@
         </div>
 
         <h5 class="pb-2">Symptoms list</h5>
+        <!-- search bar etc. -->
         <div id="filters" class="p-3 border border-bottom-0 rounded-top bg-light">
             <form class="form-inline row align-items-center" onsubmit="return false;">
                 <div class="col-4">
@@ -67,14 +69,15 @@
                     <button type="submit" class="btn btn-primary" onclick="generateSymptomsList()">Search</button>
                     <button type="button" class="btn btn-secondary" onclick="clearSearch()">Clear search</button>
                 </div>
-
             </form>
         </div>
+        <!-- output table -->
         <div class="p-3 border">
             <div id="symptoms">
 
             </div>
         </div>
+        <!-- paging -->
         <div class="p-3 mb-3 border border-top-0 rounded-bottom bg-light">
             <div class="row justify-content-start align-items-center">
                 <div class="col-auto">
@@ -93,6 +96,7 @@
                 </div>
             </div>
         </div>
+
     </div>
 </body>
 </html>
