updated add symptom function

--- a/Oblig-1-ITPE3200/wwwroot/edit.html
+++ b/Oblig-1-ITPE3200/wwwroot/edit.html
@@ -11,8 +11,15 @@
     <div class="container">
         <h3 id="diagnoseNavn"></h3>
         <div id="table"></div>
-        <input type="text" id="editSymptom" />
+        <div id="table2"></div>
+        <input type="text" id="inputSymptom">
         <button onclick="addSymptom()">Add</button>
+        <div>
+            <br />
+            <button class="btn btn-success" onclick="sendSymptomer()">Confirm</button>
+            <a class="btn btn-primary" href="admin.html">Back</a>
+        </div>
+        <div id="tilbakeMelding"></div>
     </div>
 </body>
 </html>
