--- a/Oblig-1-ITPE3200/wwwroot/index.html
+++ b/Oblig-1-ITPE3200/wwwroot/index.html
@@ -28,7 +28,7 @@
                 </form>
             </div>
             <div class="col-md-4">
-                <a class="btn btn-primary" href="admin.html">Admin</a>
+                <a class="btn btn-info" href="admin.html">Admin</a>
             </div>
             <div id="test"></div>
         </div>
