added create diagnose page

--- a/Oblig-1-ITPE3200/wwwroot/admin.html
+++ b/Oblig-1-ITPE3200/wwwroot/admin.html
@@ -11,6 +11,7 @@
     <div class="container">
         <h1>Dashboard</h1>
         <div id="dashboard"></div>
+        <a class="btn btn-primary" href="addNewDiagnose.html">Add New Diagnose</a>
         <a class="btn btn-primary" href="index.html">Home</a>
     </div>
 </body>
