--- a/Oblig-1-ITPE3200/wwwroot/edit.html
+++ b/Oblig-1-ITPE3200/wwwroot/edit.html
@@ -18,13 +18,17 @@
                 <textarea class="form-control" type="text" id="description" rows="3"></textarea>
             </div>
         </form>
-        <h5>Symptoms</h5>
-        <div id="table"></div>
+        <h5><strong>Symptoms</strong></h5>
+        <div id="relevantSyptomsTable"></div>
         <div id="symptomStatus"></div>
+        <div id="irrelevantSyptomsTable"></div>
+        <div>
+            <input type="text" id="addNewSymptom">
+            <button class="btn btn-primary" onclick="addNewSymptom()">Add New Symptom</button>
+        </div>
         <div>
             <br />
             <button class="btn btn-success" onclick="confirm()">Save changes</button>
-            <a class="btn btn-primary" href="admin.html">Back</a>
         </div>
         <div id="tilbakeMelding"></div>
     </div>
