simplified create new diagnose page

--- a/Oblig-1-ITPE3200/wwwroot/admin.html
+++ b/Oblig-1-ITPE3200/wwwroot/admin.html
@@ -12,7 +12,7 @@
         <h1>Dashboard</h1>
         <div id="dashboard"></div>
         <a class="btn btn-primary" href="addNewDiagnose.html">Add New Diagnose</a>
-        <a class="btn btn-primary" href="index.html">Home</a>
+        <a class="btn btn-warning" href="index.html">Exit</a>
     </div>
 </body>
 </html>
