--- a/Oblig-1-ITPE3200/wwwroot/addNewDiagnose.html
+++ b/Oblig-1-ITPE3200/wwwroot/addNewDiagnose.html
@@ -10,22 +10,19 @@
 <body>
     <div class="container">
         <h1>New Diagnose</h1>
-        <form>
+        <form id="form">
             <div class="form-group">
                 <label for="diagnoseName">Name</label>
                 <input type="text" class="form-control" id="diagnoseName">
             </div>
             <div class="form-group">
                 <label for="description">Description</label>
-                <input type="text" class="form-control" id="description">
+                <textarea type="text" class="form-control" id="description" rows="3"></textarea>
             </div>
         </form>
-        <button onclick="createEnDiagnose()" class="btn btn-primary">Generate new diagnose</button>
-        <br>
-        <div id="table"></div>
-        <div id="symptomTable"></div>
-        <button class="btn btn-success" onclick="confirm()">Confirm</button>
+        <button id="btn" onclick="createEnDiagnose()" class="btn btn-success">Generate new diagnose</button>
         <a class="btn btn-primary" href="admin.html">Go back</a>
+        <div id="feil"></div>
     </div>
 </body>
 </html>
