--- a/Oblig-1-ITPE3200/wwwroot/index.html
+++ b/Oblig-1-ITPE3200/wwwroot/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Symptom til diagnose kalkulator</h1>
+        <h1>Symptom to diagnosis calculator</h1>
         <div class="row">
             <div class="col-md-8">
                 <form class="form">
@@ -28,7 +28,7 @@
                 </form>
             </div>
             <div class="col-md-4">
-                <a class="btn btn-info" href="admin.html">Admin</a>
+                <a class="btn btn-warning" href="admin.html">Admin</a>
             </div>
             <div id="test"></div>
         </div>
