cant send list of ints to server

--- a/Oblig-1-ITPE3200/wwwroot/index.html
+++ b/Oblig-1-ITPE3200/wwwroot/index.html
@@ -41,6 +41,11 @@
                     <button class="btn btn-primary" onclick="findMatchingDisease()">Calculate</button>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-md" id="result">
+
+                </div>
+            </div>
         </div>
     </div>
 
