UI: Changed links to buttons

--- a/Oblig-1-ITPE3200/wwwroot/index.html
+++ b/Oblig-1-ITPE3200/wwwroot/index.html
@@ -40,7 +40,7 @@
 
         <header class="mb-3">
             <h1 class="pb-2">Symptomkalkulator</h1>
-            <p class="col-6">
+            <p>
                 Select one or more symptoms from the symptoms table below. Diseases with all the selected symptoms will be shown automatically.
                 Click on a selected symptom to deselect it. You may also search for symptoms by name.
             </p>
@@ -73,9 +73,7 @@
         </div>
         <!-- output table -->
         <div class="p-3 border">
-            <div id="symptoms">
-
-            </div>
+            <div id="symptoms"></div>
         </div>
         <!-- paging -->
         <div class="p-3 mb-3 border border-top-0 rounded-bottom bg-light">
@@ -84,9 +82,7 @@
                     <ul class="pagination mb-0" id="pagenav">
                     </ul>
                 </div>
-                <div class="col-auto">
-                    Results per page:
-                </div>
+                <div class="col-auto">Results per page:</div>
                 <div class="col-auto">
                     <select class="form-select" aria-label="Default select example" onchange="generateSymptomsList()" id="pagesizeselect">
                         <option value="5">5</option>
