--- a/Oblig-1-ITPE3200/wwwroot/lagre.html
+++ b/Oblig-1-ITPE3200/wwwroot/lagre.html
@@ -78,9 +78,7 @@
 
         <!-- output table -->
         <div class="mb-3 p-3 border">
-            <div id="symptoms">
-
-            </div>
+            <div id="symptoms"></div>
         </div>
 
         <!-- paging -->
@@ -90,9 +88,7 @@
                     <ul class="pagination mb-0" id="pagenav">
                     </ul>
                 </div>
-                <div class="col-auto">
-                    Results per page:
-                </div>
+                <div class="col-auto">Results per page:</div>
                 <div class="col-auto">
                     <select class="form-select" aria-label="Default select example" onchange="generateSymptomsList()" id="pagesizeselect">
                         <option value="5">5</option>
