--- a/Oblig-1-ITPE3200/wwwroot/disease.html
+++ b/Oblig-1-ITPE3200/wwwroot/disease.html
@@ -43,7 +43,7 @@
         <p class="mb-3" id="description"></p>
         <h6>Symptoms:</h6>
         <p class="mb-3" id="symptoms"></p>
-        <p class="pt-3"><a href="#" onclick="history.back()" class="link-secondary">Back</a></p>
+        <p class="pt-3"><a href="#" onclick="history.back()" class="btn btn-outline-secondary btn-sm">Back</a></p>
     </div>
 </body>
 </html>
