Added some small tests for login on client. LogIn page for login and small navbar change on index.

--- a/Oblig-1-ITPE3200/wwwroot/index.html
+++ b/Oblig-1-ITPE3200/wwwroot/index.html
@@ -26,11 +26,9 @@
                         <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="diseaselist.html">Disease list</a>
+                        <a class="nav-link" href="login.html">Admin</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="lagre.html">Save new disease</a>
-                    </li>
+
                 </ul>
             </div>
         </div>
