lagt til feilhåndering og logging

--- a/Oblig-1-ITPE3200/wwwroot/disease.html
+++ b/Oblig-1-ITPE3200/wwwroot/disease.html
@@ -45,5 +45,6 @@
         <p class="mb-3" id="symptoms"></p>
         <p class="pt-3"><a href="#" onclick="history.back()" class="link-secondary">Back</a></p>
     </div>
+    <div id="#feil"></div>
 </body>
 </html>
